--- a/style.css
+++ b/style.css
@@ -15,9 +15,9 @@ header .container {
 }
 
 .card {
-    height: fit-content;
+    height: auto;
     width: fit-content;
-    flex-basis: 33%;
+    flex-basis: 29%;
 }
 
 header .logo {
